# cmake-practice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
LED_driver/: CMakeLists.txt  build_and_test.sh
LED_driver/build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
LED_driver/build_test/Testing/Temporary/: CTestCostData.txt
LED_driver/build_test/src/: CTestTestfile.cmake  cmake_install.cmake
LED_driver/build_test/test/: CTestTestfile.cmake  LEDDriverTest  cmake_install.cmake
LED_driver/include/: LEDDriver.h
LED_driver/include/util/: RuntimeError.h
LED_driver/mocks/: RuntimeErrorStub.c
LED_driver/src/: LEDDriver.c
LED_driver/test/: CMakeLists.txt  LEDDriver.c  LEDDriverTest.c  LEDDriverTestRunner.c
Unity_test/: CMakeLists.txt
Unity_test/LED_driver/: CMakeLists.txt  LEDDriverTest.c  LEDDriverTestRunner.c  Tests.c
Unity_test/build_test/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
Unity_test/build_test/LED_driver/: CTestTestfile.cmake  LEDDriverTest  cmake_install.cmake
Unity_test/build_test/Testing/Temporary/: CTestCostData.txt
Unity_test/build_test/test/: CTestTestfile.cmake  cmake_install.cmake
Unity_test/build_test/test/suite_stdio/: CTestTestfile.cmake  cmake_install.cmake  suite_stdio_app
Unity_test/test/: CMakeLists.txt
Unity_test/test/suite_stdio/: CMakeLists.txt  TestSprintf.c  TestSprintf_runner.c  suite_stdio.c
src/: CMakeLists.txt  cmake_install.cmake  good_morning.cpp  hello.cpp
test/: CMakeLists.txt  cmake_install.cmake  main.cpp
